--- a/public/index.css
+++ b/public/index.css
@@ -1,7 +1,8 @@
-body {
+html {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
   width: 100%;
-  height: 100%;
+  height: 100% !important;
+  background-color: #FFF8F0;
 }
