--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,4 +1,37 @@
 .App {
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  background-color: #FFF8F0;
+}
+
+.SignInUp {
+  width: 100%;
+  height: 100%;
+  background-color: #FFF8F0;
+}
+
+.signInButton {
+  text-align: center;
+}
+
+.FormFields {
+  margin-top: 80px;
+  margin-left: 30px;
+  margin-right: 30px;
+}
+
+.bottomDiv {
+  position: absolute;
+  width: 100%;
+  bottom: 35px;
+  text-align: center;
+}
+
+.homeBottom {
+  position: absolute;
+  width: 100%;
+  bottom: 35px;
   text-align: center;
 }
 
@@ -8,10 +41,15 @@
 }
 
 .App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+  background-color: #FFF8F0;
+  height: 250px;
+  padding: 35px;
+  color: #FFF8F0;
+}
+
+.pageHeader {
+  padding: 35px;
+  text-align: center;
 }
 
 .App-title {
@@ -20,9 +58,100 @@
 
 .App-intro {
   font-size: large;
+
 }
 
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
+}
+
+h1 {
+  padding: .66rem 0;
+  text-align: center;
+  font-family: 'Varela Round', sans-serif;
+  font-size: 4rem;
+  left: 0;
+  top: 0;
+  width: 100%;
+  margin: 0;
+  padding-top: 10px;
+}
+
+p {
+  font-family: 'Varela Round', sans-serif;
+  margin-left: 30px;
+  margin-right: 30px;
+  color: #A0A8A0;
+  text-align: center;
+}
+
+hr {
+  color: #A0A8A0;
+  background-color: #A0A8A0;
+  height: 1px;
+  border: none;
+}
+
+.HeaderLine {
+  display: block;
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
+  margin-left: 20%;
+  margin-right: 20%;
+  border-style: inset;
+  border: none;
+  color: #A0A8A0;
+  background-color: #A0A8A0;
+  height: 1px;
+}
+
+.goButton {
+  margin-top: 50px;
+  margin-bottom: 10px;
+}
+
+.logIn {
+    font-family: 'Varela Round', sans-serif;
+    margin-left: 30px;
+    margin-right: 30px;
+    color: #A0A8A0;
+}
+
+
+
+.dashIcon {
+  text-align: center;
+  padding-top: 5px;
+  padding-bottom: 10px;
+}
+
+.reminderAlerts {
+#  color: red;
+  margin: auto;
+}
+
+.activityText {
+  text-align: center;
+  font-family: 'Varela Round', sans-serif;
+  font-size: 2rem;
+}
+
+.signInNavButton {
+  text-align: center;
+}
+
+.button1 {
+  background-color: #FFF8F0;
+  color: #A0A8A0;
+  border: none;
+  text-align: center;
+  font-family: 'Varela Round', sans-serif;
+}
+.button1:focus {
+  background-color: #FFF8F0;
+  color: #A0A8A0;
+  border: none;
+  text-align: center;
+  font-family: 'Varela Round', sans-serif;
 }
