--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -28,6 +28,17 @@
   text-align: center;
 }
 
+.trend {
+  text-align: center;
+}
+.trendDiv {
+  width: 200px;
+#  margin-left: 50px;
+#  margin-right: 50px;
+  text-align: center;
+  margin:0 auto;
+}
+
 .homeBottom {
   position: absolute;
   width: 100%;
@@ -45,6 +56,29 @@
   height: 250px;
   padding: 35px;
   color: #FFF8F0;
+}
+
+.oo-header {
+  background-color: #FFF8F0;
+  height: 210px;
+  padding-top: 35px;
+  padding-left: 35px;
+  padding-right: 35px;
+  color: #FFF8F0;
+  text-align: center;
+}
+
+.datesContainer {
+  overflow: hidden;
+  height: 300px;
+  padding-left: 35px;
+  padding-right: 35px;
+}
+
+.dateBox {
+  height: 100%;
+  width: 100%;
+  overflow-y: scroll;
 }
 
 .pageHeader {
@@ -86,6 +120,14 @@ p {
   text-align: center;
 }
 
+.card .card-content p {
+  font-family: 'Varela Round', sans-serif;
+  margin-left: 30px;
+  margin-right: 30px;
+  color: #A0A8A0;
+  text-align: center;
+}
+
 hr {
   color: #A0A8A0;
   background-color: #A0A8A0;
@@ -108,7 +150,15 @@ hr {
 
 .goButton {
   margin-top: 50px;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
+}
+
+.signOutButton {
+  margin: 30px;
+}
+
+.dateButton {
+  margin: 5px;
 }
 
 .logIn {
@@ -154,4 +204,38 @@ hr {
   border: none;
   text-align: center;
   font-family: 'Varela Round', sans-serif;
+}
+
+.bad {
+      width: 10px;
+      height: 10px;
+      -webkit-border-radius: 5px;
+      -moz-border-radius: 5px;
+      border-radius: 5px;
+      background: #ff3d00;
+      display: in-line;
+}
+
+.good {
+      width: 10px;
+      height: 10px;
+      -webkit-border-radius: 5px;
+      -moz-border-radius: 5px;
+      border-radius: 5px;
+      background: #4db6ac;
+      display: in-line;
+}
+
+.notSet {
+      width: 10px;
+      height: 10px;
+      -webkit-border-radius: 5px;
+      -moz-border-radius: 5px;
+      border-radius: 5px;
+      background: #A0A8A0;
+      display: in-line;
+}
+
+.dateCard {
+  background-color: #FFF8F0;
 }
