--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -70,10 +70,10 @@
 
 .datesContainer {
   overflow: hidden;
-  height: 225px;
+  height: 525px;
   padding-left: 35px;
   padding-right: 35px;
-  padding-top: 0px;
+  padding-top: 40px;
 }
 
 .dateBox {
@@ -106,6 +106,18 @@ h1 {
   text-align: center;
   font-family: 'Varela Round', sans-serif;
   font-size: 4rem;
+  left: 0;
+  top: 0;
+  width: 100%;
+  margin: 0;
+  padding-top: 10px;
+}
+
+h2 {
+  padding: .5rem 0;
+  text-align: center;
+  font-family: 'Varela Round', sans-serif;
+  font-size: 2.5rem;
   left: 0;
   top: 0;
   width: 100%;
@@ -239,4 +251,22 @@ hr {
 
 .dateCard {
   background-color: #FFF8F0;
+}
+
+.todayCard {
+  background-color: #FFF8F0;
+  # margin-top: 175px; /* minus half the height */
+}
+
+.spacer {
+  height: 175px;
+}
+
+.percent {
+  margin-top: 27px;
+}
+
+.percentText {
+  margin-top: 0px;
+  margin-bottom: 5px;
 }
