--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -16,16 +16,33 @@
 }
 
 .FormFields {
-  margin-top: 80px;
+  margin-top: 0px;
   margin-left: 30px;
   margin-right: 30px;
+  margin-bottom: 0px;
 }
+
+.FormFieldsSignUp {
+  margin-top: 50px;
+  margin-left: 30px;
+  margin-right: 30px;
+  margin-bottom: 0px;
+}
+
+.input
 
 .bottomDiv {
   position: absolute;
   width: 100%;
-  bottom: 35px;
-  text-align: center;
+  bottom: 10px;
+}
+
+.headerRow {
+   padding: 10px 16px;
+  # background-color: #FFF8F0;
+   position: fixed;
+   top: 0;
+  width: 100%;
 }
 
 .trend {
@@ -82,6 +99,11 @@
   overflow-y: scroll;
 }
 
+.dateSwitch {
+  margin-top: 50px;
+  text-align: center;
+}
+
 .pageHeader {
   padding: 35px;
   text-align: center;
@@ -105,7 +127,7 @@ h1 {
   padding: .5rem 0;
   text-align: center;
   font-family: 'Varela Round', sans-serif;
-  font-size: 4rem;
+  font-size: 3.5rem;
   left: 0;
   top: 0;
   width: 100%;
@@ -133,6 +155,10 @@ p {
   text-align: center;
 }
 
+.tagLine {
+  font-size: 1.2rem;
+}
+
 .card .card-content p {
   font-family: 'Varela Round', sans-serif;
   margin-left: 30px;
@@ -146,6 +172,14 @@ hr {
   background-color: #A0A8A0;
   height: 1px;
   border: none;
+}
+
+.pGreen {
+  color: #4db6ac;
+}
+
+.pRed {
+  color: #ff3d00;
 }
 
 .HeaderLine {
@@ -217,6 +251,10 @@ hr {
   border: none;
   text-align: center;
   font-family: 'Varela Round', sans-serif;
+}
+
+.habitButton {
+  margin-top: 100px;
 }
 
 .bad {
