--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -17,15 +17,15 @@
 
 .FormFields {
   margin-top: 0px;
-  margin-left: 30px;
-  margin-right: 30px;
+  margin-left: 0px;
+  margin-right: 0px;
   margin-bottom: 0px;
 }
 
 .FormFieldsSignUp {
   margin-top: 50px;
-  margin-left: 30px;
-  margin-right: 30px;
+  margin-left: 0px;
+  margin-right: 0px;
   margin-bottom: 0px;
 }
 
@@ -38,7 +38,7 @@
 }
 
 .headerRow {
-   padding: 10px 16px;
+   padding: 16px 0px;
   # background-color: #FFF8F0;
    position: fixed;
    top: 0;
@@ -47,6 +47,7 @@
 
 .trend {
   text-align: center;
+  margin-top: 20px;
 }
 .trendDiv {
   width: 200px;
@@ -87,10 +88,19 @@
 
 .datesContainer {
   overflow: hidden;
-  height: 525px;
-  padding-left: 35px;
-  padding-right: 35px;
-  padding-top: 40px;
+  # height: 525px;
+  #padding-left: 35px;
+  #padding-right: 35px;
+  margin-top: 40px;
+  margin-bottom: 210px;
+  #boarder: solid 10px #00F;
+  height: 100%;
+}
+
+.mainContainer {
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
 }
 
 .dateBox {
@@ -254,7 +264,8 @@ hr {
 }
 
 .habitButton {
-  margin-top: 100px;
+  margin-top: 0px;
+  margin-bottom: 8px;
 }
 
 .bad {
@@ -410,4 +421,27 @@ td {
 
 .modal-footer {
   background-color: #FFF8F0 !important;
+}
+
+.centeredMenu {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.menuBut {
+  margin: 20px;
+}
+
+.screenNameLabel {
+  margin-top: 100px;
+}
+
+.signOutDiv {
+  margin-top: 170px;
+}
+
+.over {
+  margin-top: 15px;
 }
