new year 2020 updates including ability to send emails

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -15,6 +15,11 @@
   text-align: center;
 }
 
+.emailButton {
+  text-align: center;
+  margin-top: 16px;
+}
+
 .FormFields {
   margin-top: 0px;
   margin-left: 0px;
